@@ -192,6 +192,8 @@ t/1161_save_multipage_pdf_with_utf8.t
 t/1162_save_multipage_pdf.t
 t/1171_prepend_pdf.t
 t/1172_append_pdf.t
+t/1173_prepend_pdf_with_space.t
+t/1174_prepend_pdf_with_inverted_comma.t
 t/121_save_djvu.t
 t/122_save_djvu_with_text.t
 t/123_save_djvu_with_hocr.t
