@@ -1,5 +1,6 @@
 1.5.2 (26.08.2016):
 
+* Fixed bug prepending or appending to a PDF with a space in the path.
 * Refactored code handling geometry options to reduce complexity and duplication
 
 
